Add easy link to settings and save token to local storage.

--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,8 @@
 <html>
 <body>
     <button id="saveBookmark">Save Bookmark</button>
+    <br/>
+    <button id="openSettings">Settings</button>
     <script src="popup.js"></script>
 </body>
 </html>
